# HamArc

./: Archive.cpp  Archive.h  CMakeLists.txt  CommonTools.cpp  CommonTools.h  CreateFunctions.cpp  CreateFunctions.h  DecodeAndEncode.cpp  DecodeAndEncode.h  DecodeAndEncodeFunctions.cpp  DecodeAndEncodeFunctions.h  Documentation.md  GetArchiveInfo.cpp  GetArchiveInfo.h  HammingCode.cpp  HammingCode.h  Parser.cpp  Parser.h  README.md  Requests.cpp  Requests.h  SomeFunctionsForExtractShowDelete.cpp  SomeFunctionsForExtractShowDelete.h  SomeGeneralFunctions.cpp  SomeGeneralFunctions.h  WriteInfoToArchive.cpp  WriteInfoToArchive.h  main.cpp
